package entrega1;

/**
 * Esta interfaz define la estrategia de servicio que un restaurante puede implementar.
 */
public interface EstrategiaDeServicio {

    /**
     * Este método se encarga de ejecutar la estrategia de servicio específica.
     */
    void ejecutarEstrategia();
}